# torchbayesian

./: LICENSE  README.md  pyproject.toml  requirements.txt
docs/source/: api.rst  conf.py  index.rst  installation.rst  quickstart.rst
examples/: bnn_example.py
torchbayesian/: types.py
torchbayesian/bnn/: __init__.py  bayesian_module.py
torchbayesian/bnn/modules/: __init__.py  bayesian_module.py  dropout.py
torchbayesian/bnn/priors/: __init__.py  gaussian_prior.py
torchbayesian/bnn/priors/base/: __init__.py  prior.py
torchbayesian/bnn/utils/: __init__.py  enable_mc_dropout.py  factories.py  reparametrize.py
torchbayesian/bnn/utils/factories/: __init__.py  factory.py  posterior_factory.py  prior_factory.py
torchbayesian/bnn/variational_posteriors/: __init__.py  gaussian_posterior.py  pretrained_gaussian_posterior.py
torchbayesian/bnn/variational_posteriors/base/: __init__.py  variational_posterior.py
torchbayesian/utils/: monte_carlo_dropout.py
