[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchbayesian"
version = "0.2.1"
description = "PyTorch-native Bayesian neural networks for uncertainty quantification in deep learning"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE*"]
authors = [{name = "Raphael Brodeur", email = "raphael.brodeur@gmail.com"}]
keywords = [
    "bayes by backprop",
    "bayesian neural networks",
    "bnn",
    "deep learning",
    "machine learning",
    "monte carlo dropout",
    "pytorch",
    "torch",
    "uncertainty",
    "uncertainty quantification",
    "variational inference"
]
classifiers=[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
Homepage = "https://github.com/raphbrodeur/torchbayesian"